// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow renders with new posts 1`] = `
<li
  data-stylename="s.communityRow"
>
  <Link
    data-stylename="s.communityRowLink"
    replace={false}
    title="Foomunity"
    to="/c/foo"
  >
    <div
      data-stylename="s.communityRowAvatar"
      style={
        Object {
          "backgroundImage": "url(/foo.png)",
        }
      }
    />
    <span
      data-stylename="s.community-name s.is-member"
    >
      Foomunity
    </span>
  </Link>
</li>
`;

exports[`CommunityRow renders with zero new posts 1`] = `
<li
  data-stylename="s.communityRow"
>
  <Link
    data-stylename="s.communityRowLink"
    replace={false}
    title="Foomunity"
    to="/c/foo"
  >
    <div
      data-stylename="s.communityRowAvatar"
      style={
        Object {
          "backgroundImage": "url(/foo.png)",
        }
      }
    />
    <span
      data-stylename="s.community-name s.is-member"
    >
      Foomunity
    </span>
  </Link>
</li>
`;

exports[`Drawer renders a community list if networks are present 1`] = `
<div
  data-stylename="s.communityDrawer"
>
  <div
    data-stylename="s.currentCommunity"
  >
    <div
      data-stylename="s.hyloLogoBar"
    >
      <img
        src="/hylo.svg"
        width="50px"
      />
      <Icon
        data-stylename="s.closeDrawer"
        name="Ex"
      />
    </div>
    <Logo />
  </div>
  <div>
    <ul
      data-stylename="s.communitiesList"
    />
    <ul
      data-stylename="s.communitiesList"
    >
      <div>
        <li
          data-stylename="s.sectionTitle"
        >
          My Networks
        </li>
        <NetworkRow
          key="1"
          network={
            Object {
              "avatarUrl": "/wombat.png",
              "communities": Array [
                Object {
                  "avatarUrl": "/foo.png",
                  "id": "11",
                  "name": "Foomunity",
                  "newPostCount": 0,
                  "slug": "foo",
                },
                Object {
                  "avatarUrl": "/bar.png",
                  "id": "22",
                  "name": "Barmunity",
                  "newPostCount": 7,
                  "slug": "bar",
                },
              ],
              "id": "1",
              "name": "Wombat Network",
            }
          }
        />
      </div>
      <li
        data-stylename="s.sectionTitle s.sectionTitleSeparator"
      >
        My Communities
      </li>
      <CommunityRow
        community={
          Object {
            "avatarUrl": "/foo.png",
            "id": "11",
            "name": "Foomunity",
            "newPostCount": 0,
            "slug": "foo",
          }
        }
        key="11"
      />
      <CommunityRow
        community={
          Object {
            "avatarUrl": "/bar.png",
            "id": "22",
            "name": "Barmunity",
            "newPostCount": 7,
            "slug": "bar",
          }
        }
        key="22"
      />
    </ul>
    <div
      data-stylename="s.newCommunity"
    >
      <Button
        color="white"
        data-stylename="s.newCommunityBtn"
        label="Start a Community"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer renders with a current community 1`] = `
<div
  data-stylename="s.communityDrawer"
>
  <div
    data-stylename="s.currentCommunity"
  >
    <div
      data-stylename="s.hyloLogoBar"
    >
      <img
        src="/hylo.svg"
        width="50px"
      />
      <Icon
        data-stylename="s.closeDrawer"
        name="Ex"
      />
    </div>
    <Logo
      community={
        Object {
          "avatarUrl": "/foo.png",
          "id": "11",
          "name": "Foomunity",
          "newPostCount": 0,
          "slug": "foo",
        }
      }
    />
  </div>
  <div>
    <ul
      data-stylename="s.communitiesList"
    />
    <ul
      data-stylename="s.communitiesList"
    >
      <li
        data-stylename="s.sectionTitle s.sectionTitleSeparator"
      >
        My Communities
      </li>
      <CommunityRow
        community={
          Object {
            "avatarUrl": "/foo.png",
            "id": "11",
            "name": "Foomunity",
            "newPostCount": 0,
            "slug": "foo",
          }
        }
        key="11"
      />
      <CommunityRow
        community={
          Object {
            "avatarUrl": "/bar.png",
            "id": "22",
            "name": "Barmunity",
            "newPostCount": 7,
            "slug": "bar",
          }
        }
        key="22"
      />
    </ul>
    <div
      data-stylename="s.newCommunity"
    >
      <Button
        color="white"
        data-stylename="s.newCommunityBtn"
        label="Start a Community"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer renders without a current community 1`] = `
<div
  data-stylename="s.communityDrawer"
>
  <div
    data-stylename="s.currentCommunity"
  >
    <div
      data-stylename="s.hyloLogoBar"
    >
      <img
        src="/hylo.svg"
        width="50px"
      />
      <Icon
        data-stylename="s.closeDrawer"
        name="Ex"
      />
    </div>
    <Logo />
  </div>
  <div>
    <ul
      data-stylename="s.communitiesList"
    />
    <ul
      data-stylename="s.communitiesList"
    >
      <li
        data-stylename="s.sectionTitle s.sectionTitleSeparator"
      >
        My Communities
      </li>
      <CommunityRow
        community={
          Object {
            "avatarUrl": "/foo.png",
            "id": "11",
            "name": "Foomunity",
            "newPostCount": 0,
            "slug": "foo",
          }
        }
        key="11"
      />
      <CommunityRow
        community={
          Object {
            "avatarUrl": "/bar.png",
            "id": "22",
            "name": "Barmunity",
            "newPostCount": 7,
            "slug": "bar",
          }
        }
        key="22"
      />
    </ul>
    <div
      data-stylename="s.newCommunity"
    >
      <Button
        color="white"
        data-stylename="s.newCommunityBtn"
        label="Start a Community"
      />
    </div>
  </div>
</div>
`;

exports[`NetworkRow is not expanded when post counts are 0 1`] = `
<li
  data-stylename="s.networkRow s.networkExpanded"
>
  <Link
    data-stylename="s.networkRowLink"
    replace={false}
    title="Network One"
    to="/n/none"
  >
    <div
      data-stylename="s.network-name-wrapper"
    >
      <div
        data-stylename="s.avatar"
        style={
          Object {
            "backgroundImage": "url(foo.png)",
          }
        }
      />
      <span
        data-stylename="s.network-name"
      >
        Network One
      </span>
      <span
        data-stylename="s.communitiesButton"
        onClick={[Function]}
      >
        <Icon
          data-stylename="s.arrowDown"
          name="ArrowDown"
        />
      </span>
    </div>
  </Link>
  <ul
    data-stylename="s.networkCommunitiesList"
  >
    <CommunityRow
      community={
        Object {
          "id": 1,
          "newPostCount": 7,
        }
      }
      key="1"
    />
    <CommunityRow
      community={
        Object {
          "id": 2,
          "newPostCount": 6,
        }
      }
      key="2"
    />
  </ul>
</li>
`;

exports[`NetworkRow matches last snapshot 1`] = `
<li
  data-stylename="s.networkRow s.networkExpanded"
>
  <Link
    data-stylename="s.networkRowLink"
    replace={false}
    title="Network One"
    to="/n/none"
  >
    <div
      data-stylename="s.network-name-wrapper"
    >
      <div
        data-stylename="s.avatar"
        style={
          Object {
            "backgroundImage": "url(foo.png)",
          }
        }
      />
      <span
        data-stylename="s.network-name"
      >
        Network One
      </span>
      <span
        data-stylename="s.communitiesButton"
        onClick={[Function]}
      >
        <Icon
          data-stylename="s.arrowDown"
          name="ArrowDown"
        />
      </span>
    </div>
  </Link>
  <ul
    data-stylename="s.networkCommunitiesList"
  >
    <CommunityRow
      community={
        Object {
          "id": 1,
          "newPostCount": 7,
        }
      }
      key="1"
    />
    <CommunityRow
      community={
        Object {
          "id": 2,
          "newPostCount": 6,
        }
      }
      key="2"
    />
  </ul>
</li>
`;

exports[`NetworkRow see all button calls preventDefault and sets the state 1`] = `
<li
  data-stylename="s.networkRow s.networkExpanded"
>
  <Link
    data-stylename="s.networkRowLink"
    replace={false}
    title="Network One"
    to="/n/none"
  >
    <div
      data-stylename="s.network-name-wrapper"
    >
      <div
        data-stylename="s.avatar"
        style={
          Object {
            "backgroundImage": "url(foo.png)",
          }
        }
      />
      <span
        data-stylename="s.network-name"
      >
        Network One
      </span>
      <span
        data-stylename="s.communitiesButton"
        onClick={[Function]}
      >
        <Icon
          data-stylename="s.arrowDown"
          name="ArrowDown"
        />
      </span>
    </div>
  </Link>
  <ul
    data-stylename="s.networkCommunitiesList"
  >
    <CommunityRow
      community={
        Object {
          "id": 1,
          "newPostCount": 7,
        }
      }
      key="1"
    />
    <CommunityRow
      community={
        Object {
          "id": 2,
          "newPostCount": 6,
        }
      }
      key="2"
    />
    <li
      data-stylename="s.seeAllBtn"
      onClick={[Function]}
    >
      See all
    </li>
  </ul>
</li>
`;

exports[`NetworkRow see all button shows "see all" button when there are non member communities 1`] = `
<li
  data-stylename="s.networkRow s.networkExpanded"
>
  <Link
    data-stylename="s.networkRowLink"
    replace={false}
    title="Network One"
    to="/n/none"
  >
    <div
      data-stylename="s.network-name-wrapper"
    >
      <div
        data-stylename="s.avatar"
        style={
          Object {
            "backgroundImage": "url(foo.png)",
          }
        }
      />
      <span
        data-stylename="s.network-name"
      >
        Network One
      </span>
      <span
        data-stylename="s.communitiesButton"
        onClick={[Function]}
      >
        <Icon
          data-stylename="s.arrowDown"
          name="ArrowDown"
        />
      </span>
    </div>
  </Link>
  <ul
    data-stylename="s.networkCommunitiesList"
  >
    <CommunityRow
      community={
        Object {
          "id": 1,
          "newPostCount": 7,
        }
      }
      key="1"
    />
    <CommunityRow
      community={
        Object {
          "id": 2,
          "newPostCount": 6,
        }
      }
      key="2"
    />
    <li
      data-stylename="s.seeAllBtn"
      onClick={[Function]}
    >
      See all
    </li>
  </ul>
</li>
`;
